2007-06-05  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #4226: New content elements wizard removes CE from array if tt_content_defValues property is zero

2007-05-25  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5655: TYPO3 back-end was blocked on new installations because of a bug in RFCs #1642/#4886

2007-05-23  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5564: IRRE - foreign_selector/foreign_unique on click issue

2007-05-04  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug 5550: 'lower' TCA specification may fail with non-ascii characters
	* Added $GLOBALS['TYPO3_DB']->sql_free_result() to TCEmain::recordInfo() to avoid resource waste

2007-05-18  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed bug #5645: Missing Slovenian flag
	* Fixed bug #5628: Missing Slovak flag
	* Fixed bug #5578: config setting SYS[requestURIvar] doesn't work
	* Fixed bug #4509/3925: jsfunc.validateform.js does not verify checkbox fields (thanks to Jascha Schubert and Eicke Godehardt)

2007-05-17 Andreas Otto <andreas.otto@dkd.de>
	* Feature request: If TYPO3 is configured to send a notification email about install tool logins this email discloses the used password if the login fails. Since this behaviour might not be wanted only the last 5 characters of the md5 hash of the used password are disclosed.

2007-05-12  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5074: IRRE - Hook processDatamap_afterDatabaseOperations executed early

2007-05-09  Ingo Renner  <typo3@ingo-renner.com>

	* fixed bug 5047: mp3 icon is missing

2007-05-10  Thorsten Kahler  <thorsten.kahler@dkd.de>

	* fixed bug #209: require field URL in page-type "External URL"

2007-05-09  Ingo Renner  <typo3@ingo-renner.com>

	* fixed bugs 1642 and 4886: when installing an extension with new BE modules, the modules do not appear

2007-05-09  Andreas Otto  <andreas.otto@dkd.de>
