@@ -1739,5 +1739,10 @@ class t3lib_TCEforms_inline {
 		$margin = ($this->inlineStyles['margin-right']+1)*2;
 		return $margin;
 	}
- }
+}
+
+
+if (defined('TYPO3_MODE') && $TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['t3lib/class.t3lib_tceforms_inline.php'])	{
+	include_once($TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['t3lib/class.t3lib_tceforms_inline.php']);
+}
 ?>
